Submit button and Modal Open

--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -53,7 +53,7 @@
   background-color: rgba(112, 76, 182, 0.2);
 }
 
-.asyncButton {
+/* .asyncButton {
   composes: button;
   position: relative;
 }
@@ -75,4 +75,4 @@
   width: 0%;
   opacity: 1;
   transition: 0s;
-}
+} */
